<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <EditText
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:background="@drawable/edittext_bg_style01"
        android:hint="@string/login_id_hint"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/edittext_bg_style01"
        android:hint="@string/login_pwd_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:singleLine="true" />

    <TextView
        android:id="@+id/login_forget_passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="5dp"
        android:text="@string/login_forget_passWord"
        android:textColor="@color/description" />

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/button_selector"
        android:text="@string/login" />
    <!-- 扩展布局 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_bottom" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_no_account_tips"
                android:textColor="@color/description" />

            <TextView
                android:id="@+id/login_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/login_sign_up"
                android:textColor="@color/mpos" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>