<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <EditText
        android:id="@+id/sign_up_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:background="@drawable/edittext_bg_style01"
        android:hint="@string/sign_up_id_hint"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:singleLine="true" />

    <EditText
        android:id="@+id/sign_up_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/edittext_bg_style01"
        android:hint="@string/sign_up_pwd_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:singleLine="true" />
    <EditText
        android:id="@+id/sign_up_repwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/edittext_bg_style01"
        android:hint="@string/sign_up_repwd_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:singleLine="true" />

    <Button
        android:id="@+id/sign_up_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_edittext_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/button_selector"
        android:text="@string/sign_up" />
</LinearLayout>